--- a/div_puzzle3/css/style.css
+++ b/div_puzzle3/css/style.css
@@ -1,76 +1,79 @@
 @charset "utf-8";
+
 .wrapper {
-    margin: 0 auto;
-    width: 400px;
+  margin: 0 auto;
+  width: 400px;
 }
 
 .clearfix::after {
-    content: "";
-    display: block;
-    clear: both;
+  content: "";
+  display: block;
+  clear: both;
 }
 
 .header {
-    height: 100px;
-    width: 400px;
-    background-color: #141f40;
-    position: relative;
+  height: 100px;
+  background-color: #141f40;
+  position: relative;
 }
 
 .white {
-    width: 160px;
-    height: 60px;
-    background-color: #fff;
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    padding: 10px;
-    box-sizing: border-box;
+  height: 60px;
+  background-color: #fff;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 .purple {
-    float: left;
-    width: 40px;
-    height: 40px;
-    background-color: #a9004b;
-    margin-left: 10px;
+  float: left;
+  width: 40px;
+  height: 40px;
+  background-color: #a9004b;
+  margin-left: 10px;
 }
 
 .purple:first-child {
-    margin: 0;
+  margin: 0;
 }
 
 .green {
-    float: left;
-    width: 150px;
-    height: 250px;
-    background-color: #80bfa8;
+  float: left;
+  width: 150px;
+  height: 250px;
+  background-color: #80bfa8;
 }
 
 .red {
-    float: left;
-    width: 250px;
-    height: 250px;
-    background-color: #8c2727;
-    padding: 40px;
-    box-sizing: border-box;
+  position: relative;
+  float: left;
+  width: 250px;
+  height: 250px;
+  background-color: #8c2727;
+}
+
+.orange-box {
+  position: absolute;
+  top: 40px;
+  left: 40px;
+  width: 150px;
 }
 
 .orange {
-    width: 150px;
-    height: 50px;
-    margin-top: 10px;
-    background-color: #ff863f;
-    border: 5px solid #fff;
-    box-sizing: border-box;
+  height: 50px;
+  margin-top: 10px;
+  background-color: #ff863f;
+  border: 5px solid #fff;
+  box-sizing: border-box;
 }
 
 .orange:first-child {
-    margin: 0;
+  margin: 0;
 }
 
 .footer {
-    height: 100px;
-    width: 400px;
-    background-color: #d98d30;
+  height: 100px;
+  background-color: #d98d30;
 }
